Completed WBIM assignment 1 and made minor changes to website

--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@
       share your thoughts, and succeed in the task of filling out the form to the right then you might just 
       be able to do exactly that. I'll receive your message, read it, tear it up and throw it dramatically 
       into the fire. Oh, and then I'll respond, of course. If you don't think you can handle it, you 
-      could always just pop in an <u>email</u>. 
+      could always just pop in an <u><a class="email" href="mailto:abhra.1992@live.com">email</a></u>. 
     </p>
     <p>
       If you are writing because you think I would be a good fit for your project, please include as 
@@ -87,7 +87,7 @@
     <footer>
   <b>&copy; 2013</b> Website Designed and Developed by <b>Abhra Basak</b>.<br/>
   All Trademarks belong to their respective Owners.<br/>
-  Site Last Updated On <b>2013-03-07</b>.
+  Site Last Updated On <b>2013-03-12</b>.
 </footer>
   </body>
 </html>
