--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       My name is ABHRA BASAK. I am a 20-year old Computer Science Undergraduate 
       in <b><a href="http://iitmandi.ac.in">IIT Mandi</a></b> (living in Kolkata). 
       I am passionate about Web Technologies, and also enjoy Programming, Football, Mathematics, Action Movies and Pop Music.
-      This is my cool website made with love.
+      This is my cool website made with style.
     </p>
     <p>
       I'm always looking for ideas that might make my work more creative. I'm especially interested in Computer 
@@ -94,7 +94,7 @@
     <footer>
   <b>&copy; 2013</b> Website Designed and Developed by <b>Abhra Basak</b>.<br/>
   All Trademarks belong to their respective Owners.<br/>
-  Site Last Updated On <b>2013-03-07</b>.
+  Site Last Updated On <b>2013-03-12</b>.
 </footer>
   </body>
 </html>
