--- a/wbim/index.html
+++ b/wbim/index.html
@@ -56,18 +56,20 @@
     <h4>Web Based Information Management</h4>
     <p>
       This is my assignment portfolio for Web-Based Information Management Course I am taking this semester.
+      I am also participating in helping my instructor draft an e-book for this course.
     </p>
   </section>
   <section class="assignment-list">
-    <ul>
-      <li>Assignment 1</li>
-    </ul>
-  </section>
+  <h6>All Assignments</h6>
+  <ul class="nav-bar vertical">
+    <li class=""><a href="/wbim/bpmn.html">Assignment 1 - Process Diagram using BPMN</a></li>
+  </ul>
+</section>
 </div>
     <footer>
   <b>&copy; 2013</b> Website Designed and Developed by <b>Abhra Basak</b>.<br/>
   All Trademarks belong to their respective Owners.<br/>
-  Site Last Updated On <b>2013-03-07</b>.
+  Site Last Updated On <b>2013-03-12</b>.
 </footer>
   </body>
 </html>
