Upgraded to Foundation 4 and added skills

--- a/skills.html
+++ b/skills.html
@@ -27,24 +27,33 @@
   <body class="skills">
     <header>
 	<!-- Positioning the Top Bar -->
-	<div class="fixed">
+	<div>
 		<!-- Basic Needs -->
 		<nav class="top-bar">
-			<ul>
+			<ul class="title-area">
 				<li class="name"><h1 class="site-nav-title"><a href="/">ABHRA BASAK</a></h1></li>
-				<li class="toggle-topbar"><a href="#"></a></li>
+				<!--<li class="toggle-topbar"><a href="#"></a></li>-->
+        <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
 			</ul>
-			<section>
+			<section class="top-bar-section">
 				<ul class="left">
+          <li class="divider"></li>
 					<li><a href="/">Home</a></li>
+          <li class="divider"></li>
 					<li><a href="/skills.html">Skills</a></li>
+          <li class="divider"></li>
 					<li><a href="/projects.html">Projects</a></li>
+          <li class="divider"></li>
 					<li><a href="#">Blog</a></li>
+          <li class="divider"></li>
           <li><a href="/wbim/">WBIM</a></li>
+          <li class="divider"></li>
 					<li><a href="/contact.html">Contact</a></li>
+          <li class="divider"></li>
 				</ul>
 
 				<ul class="right">
+          <li class="divider"></li>
 					<li><a href="/credits.html">Credits</a></li>
 				</ul>
 			</section>
