Changed items on WBIM project page

--- a/wbim/bpmn.html
+++ b/wbim/bpmn.html
@@ -66,17 +66,17 @@
       <h4>Assignment 1 - Process Diagrams using BPMN</h4>
       <p>
         Here, I tried out some business process models as part of the assignment.
-        My friend Shoubhik helped me out with some of these.
+        My friend <a href="#">Shoubhik</a> helped me out with some of these.
       <p>
       <figure>
         <img src="/assets/images/wbim/HardwareRetailer_1.0.png" />
-        <figcaption>Hardware Retailer</figcaption>
+        <figcaption><a href="/wbim/HardwareRetailer.bpmn">Hardware Retailer</a></figcaption>
       </figure>
     </article>
     <pre>
       
     </pre>
-    <a href="/wbim/HardwareRetailer.bpmn">View XML</a>
+    <p>To save the XML files for the BPMN, right click on the caption, and select 'Save Link As.../Save Target As...'</p>
     <p>BPMN models created using <a href="http://www.bonitasoft.com">BonitaSoft Open Solution</a>.</p>
   </section>
   <section class="assignment-list">
@@ -91,7 +91,7 @@
     <footer>
   <b>&copy; 2013</b> Website Designed and Developed by <b>Abhra Basak</b>.<br/>
   All Trademarks belong to their respective Owners.<br/>
-  Site Last Updated On <b>2013-03-12</b>.
+  Site Last Updated On <b>2013-03-14</b>.
 </footer>
   </body>
 </html>
