--- a/wbim/index.html
+++ b/wbim/index.html
@@ -73,6 +73,7 @@
   <ul class="side-nav">
     <li class="divider"></li>
     <li class=""><a href="/wbim/bpmn.html">Assignment 1 - Process Diagram using BPMN</a></li>
+    <li class=""><a href="/wbim/quality.html">Assignment 3 - Information and Data Quality</a></li>
     <li class="divider"></li>
   </ul>
 </section>
@@ -80,7 +81,7 @@
     <footer>
   <b>&copy; 2013</b> Website Designed and Developed by <b>Abhra Basak</b>.<br/>
   All Trademarks belong to their respective Owners.<br/>
-  Site Last Updated On <b>2013-03-15</b>.
+  Site Last Updated On <b>2013-03-21</b>.
 </footer>
   </body>
 </html>
