--- a/wbim/index.html
+++ b/wbim/index.html
@@ -5,13 +5,13 @@
     <!-- Always force latest IE rendering engine or request Chrome Frame -->
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="title" content="WBIM Home" />
+    <meta name="title" content="Web Based Information Management Portfolio" />
     <meta name="author" content="Abhra Basak" />
     <meta name="description" content="My Personal Home Page" />
     <meta name="copyright" content="Abhra Basak, 2013" />
 
     <!-- Use title if it's in the page YAML frontmatter -->
-    <title>WBIM Home | ABHRA BASAK</title>
+    <title>Web Based Information Management Portfolio | ABHRA BASAK</title>
 
     <link href="/assets/stylesheets/application.css" media="screen" rel="stylesheet" type="text/css" />
     
@@ -32,7 +32,6 @@
 		<nav class="top-bar">
 			<ul class="title-area">
 				<li class="name"><h1 class="site-nav-title"><a href="/">ABHRA BASAK</a></h1></li>
-				<!--<li class="toggle-topbar"><a href="#"></a></li>-->
         <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
 			</ul>
 			<section class="top-bar-section">
@@ -72,7 +71,10 @@
   <h6>All Assignments</h6>
   <ul class="side-nav">
     <li class="divider"></li>
-    <li class=""><a href="/wbim/bpmn.html">Assignment 1 - Process Diagram using BPMN</a></li>
+    <li class="active"><a href="/wbim/">Assignment 1 - Launch of Portfoilo</a></li>    
+    <li class="divider"></li>
+    <li class=""><a href="/wbim/bpmn.html">Assignment 2 - Process Diagram using BPMN</a></li>
+    <li class="divider"></li>
     <li class=""><a href="/wbim/quality.html">Assignment 3 - Information and Data Quality</a></li>
     <li class="divider"></li>
   </ul>
@@ -81,7 +83,7 @@
     <footer>
   <b>&copy; 2013</b> Website Designed and Developed by <b>Abhra Basak</b>.<br/>
   All Trademarks belong to their respective Owners.<br/>
-  Site Last Updated On <b>2013-03-21</b>.
+  Site Last Updated On <b>2013-03-24</b>.
 </footer>
   </body>
 </html>
