--- a/wbim/quality.html
+++ b/wbim/quality.html
@@ -32,7 +32,6 @@
 		<nav class="top-bar">
 			<ul class="title-area">
 				<li class="name"><h1 class="site-nav-title"><a href="/">ABHRA BASAK</a></h1></li>
-				<!--<li class="toggle-topbar"><a href="#"></a></li>-->
         <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
 			</ul>
 			<section class="top-bar-section">
@@ -67,19 +66,59 @@
       <h5>Top 10 Criteria for Quality of Information on the Web</h5>
       <p>
         In my opinion, the following criteria are the top 10 (in order of importance) for determining 
-        the quality of information on the Web.
+        the quality of information on the Web. Note: Many criteria are combined because I lay equal importance
+        on the qualities being present simultaneously.
       </p>
       <ul class="quality-criteria">
-        <li class="criterion">Availability + Accessibility + Openness</li>
-        <li class="criterion">Authority + Provenance + Verifiability</li>
-        <li class="criterion">Accuracy</li>
-        <li class="criterion">Objectivity + Validity</li>
-        <li class="criterion">Concise Representation + Composition</li>
-        <li class="criterion">Timeliness</li>
-        <li class="criterion">Scope of Coverage + Relevancy</li>
-        <li class="criterion">Completeness + Documentation</li>
-        <li class="criterion">Reliability + Reputation</li>
-        <li class="criterion">Usability + Interpretability + Reproducibility</li>
+        <li class="criterion">
+          <h6>Availability + Accessibility + Openness</h6>
+          <p>To be of value, the information should be actually available and accessible. Not all data are available
+          on-line, and the information should be easily retrievable when it is needed.</p>
+        </li>
+        <li class="criterion">
+          <h6>Authority + Provenance + Verifiability</h6>
+          <p>The information should indicate its source, that depicts the expertise or reputation of its provider.
+          The validity of the information should be verifiable irrespective of how authoritative the source is.</p>
+        </li>
+        <li class="criterion">
+          <h6>Accuracy</h6>
+          <p>The information should be correct, and should cite sources as support for evidence.</p>
+        </li>
+        <li class="criterion">
+          <h6>Objectivity + Validity</h6>
+          <p>The information should not be biased towards a particular object or community, and should provide a fair
+          interpretation of facts. The representation should be valid across all uses of the information.</p>
+        </li>
+        <li class="criterion">
+          <h6>Concise Representation + Composition</h6>
+          <p>The information should be clear, compact and unambiguous, and the message should have and presented 
+          in a coherent, logically sequential manner.</p>
+        </li>
+        <li class="criterion">
+          <h6>Timeliness + Currency</h6>
+          <p>The information should indicate over what period the data was collected, when were the data last updated,
+          and how long the data is likely to remain current and valid.</p>
+        </li>
+        <li class="criterion">
+          <h6>Scope of Coverage + Relevancy</h6>
+          <p>The information should explore a topic over a reasonable extent to be useful. Incomplete analysis often
+          degrades quality. Information should not relate to something for which it wasn't intended.</p>
+        </li>
+        <li class="criterion">
+          <h6>Completeness + Documentation</h6>
+          <p>All eligible data should be considered for compiling the information, and instructions should be provided
+          as to how to interpret individual pieces of information.</p>
+        </li>
+        <li class="criterion">
+          <h6>Reliability + Reputation</h6>
+          <p>Users of the information should be able to rely on it for their tasks, and it should not stand invalidated
+          in any particular case. It should also indicate its usefulness int he form of user reviews.</p>
+        </li>
+        <li class="criterion">
+          <h6>Usability + Interpretability + Reproducibility</h6>
+          <p>Last of all, the information should be able to be interpreted and analysed, to be put into use. It should
+          also be capable of achieving a consistent result in all uses.</p>
+        </li>
       </ul>
     </article>
     <article>
@@ -88,13 +127,86 @@
         The following is a comparison of 3 information quality models, and an attempt
         to determine the best of them.
       </p>
+      <ul class="framework-details">
+        <li class="framework">
+          <p>
+            <u>Dedeke's Conceptual Framework</u> (2000) lays emphasis on 5 quality categories, and has 28 dimensions.
+            The premise of the paper is that the quality of IS cannot be or at least should not be considered in
+            isolation of the data quality, work attributes and the processes involved during the utilization of data.
+            The paper presents a hierarchical quality framework for IS. It can be summarised as below:
+          </p>
+          <ul>
+            <li>One needs to clearly define what IS quality means to an organization.</li>
+            <li>One needs to develop dimensions for the categories of quality identified.</li>
+            <li>Data quality measures cannot be developed in isolation of the processes of data generation and the
+            contexts in which data is utilized.</li>
+          </ul>
+          <br/>
+          <p>
+            Significant amongst the considered qualities are Ergonomic, Accessibility, Transactional,
+            Contextual and Representation. The quality classification is intricately detailed, but is also limited
+            in scope. It focuses only on data, work and Software/Hardware issues. It does not include issues like 
+            cultural or behavioral issues.
+          </p>
+        </li>
+        <li class="framework">
+          <p>
+            <u>Naumann & Rolker's Classification of IQ Metadata Criteria</u> (2000) is unapparently quite complex, using
+            a 3-fold assessment for the quality of an information source, according to the subjects, objects
+            and processes involved in Information Retrieval. The framework accounts for 22 criteria for assessing IQ.
+            The premise of this model is based on two basic assumptions:
+          </p>
+          <ul>
+            <li>The quality of information is influenced by the perception of the user, the information itself,
+            and the process of accessing the information</li>
+            <li>The information retrieval process involves the user, the information and the retrieval system.</li>
+          </ul>
+          <br/>
+          <p>
+            Both the influences and the processes involved with Information Quality and Retrieval are used to 
+            assign quality scores within three contexts, Subject, Process or Object criteria.
+          </p>
+        </li>
+        <li class="framework">
+          <p>
+            <u>Leung's Adapted Extended ISO Model for Intranets</u> (2001) is an adaptation of Zeist & Hendriks Extended
+            ISO Model (1996), applied to Intranet environments, based on 6 quality characteristics. It concentrates on the
+            user-application process in order to develop a method to assess quality. The focus specifically concerns an
+            Intranet environment. However, many of the governing principals and decision making processes outlined are
+            useful when developing a way to assess the quality of information on Internet Web Pages.
+          </p>
+          <p>
+            Leung suggests that any metric initiative must address the needs of its potential users and should be
+            objective, cost effective and informative. These suggestions can be summarised as below:
+          </p>
+          <ul>
+            <li>Identify the user</li>
+            <li>Identify the metric applications (and processes that make up the system)</li>
+            <li>Identify the dimensions to be assessed</li>
+            <li>Prioritise the dimensions on Importance, Urgency and Cost metrics</li>
+            <li>Develop specific assessment metrics for prioritised dimensions</li>
+          </ul>
+        </li>
+      </ul>
+      <p>
+        I was suprised to observe that two of the frameworks I considered in the comparison were also amongst the ones
+        evaluated by <i>Knight & Burn</i> (2005). As a result, I also incorporated some of their findings in my comparison.
+      </p>
+      <p>
+        According to the above discussion, I find Naumann and Rolker's framework to be the most succint, easy to use,
+        and complete representation of what I value most in Information Quality. As a result, for personal uses,
+        I would prefer to use this framework over others.
+      <p>
     </article>
   </section>
   <section class="assignment-list">
   <h6>All Assignments</h6>
   <ul class="side-nav">
     <li class="divider"></li>
-    <li class=""><a href="/wbim/bpmn.html">Assignment 1 - Process Diagram using BPMN</a></li>
+    <li class=""><a href="/wbim/">Assignment 1 - Launch of Portfoilo</a></li>    
+    <li class="divider"></li>
+    <li class=""><a href="/wbim/bpmn.html">Assignment 2 - Process Diagram using BPMN</a></li>
+    <li class="divider"></li>
     <li class="active"><a href="/wbim/quality.html">Assignment 3 - Information and Data Quality</a></li>
     <li class="divider"></li>
   </ul>
@@ -103,7 +215,7 @@
     <footer>
   <b>&copy; 2013</b> Website Designed and Developed by <b>Abhra Basak</b>.<br/>
   All Trademarks belong to their respective Owners.<br/>
-  Site Last Updated On <b>2013-03-21</b>.
+  Site Last Updated On <b>2013-03-24</b>.
 </footer>
   </body>
 </html>
