Added WBIM assignment 4

--- a/wbim/protocols.html
+++ b/wbim/protocols.html
@@ -5,13 +5,13 @@
     <!-- Always force latest IE rendering engine or request Chrome Frame -->
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="title" content="Web Based Information Management Portfolio" />
+    <meta name="title" content="Assignment 4 - Internet Protocols and Standards" />
     <meta name="author" content="Abhra Basak" />
     <meta name="description" content="My Personal Home Page" />
     <meta name="copyright" content="Abhra Basak, 2013" />
 
     <!-- Use title if it's in the page YAML frontmatter -->
-    <title>Web Based Information Management Portfolio | ABHRA BASAK</title>
+    <title>Assignment 4 - Internet Protocols and Standards | ABHRA BASAK</title>
 
     <link href="/assets/stylesheets/application.css" media="screen" rel="stylesheet" type="text/css" />
     
@@ -24,7 +24,7 @@
     <link href="/assets/images/photo.jpg" rel="icon" type="image/jpg" />
   </head>
 
-  <body class="wbim wbim_index">
+  <body class="wbim wbim_protocols">
     <header>
 	<!-- Positioning the Top Bar -->
 	<div>
@@ -59,25 +59,44 @@
 		</nav>
 	</div>
 </header>
-    <div class="wbim-home view">
-  <section class="wbim-intro">
-    <h4>Web Based Information Management</h4>
-    <p>
-      This is my assignment portfolio for Web-Based Information Management Course I am taking this semester.
-      I am also participating in helping my instructor draft an e-book for this course.
-    </p>
+    <div class="assignment view">
+  <section class="assignment-description">
+    <article>
+      <h4>Assignment 4 - Internet Protocols and Standards</h4>
+      <p>Following are a list of some protocols and standards for the Internet and the web with their specification documents where applicable.</p>
+      <ul class="protocol-list">
+        <li class="protocol"><a href="http://tools.ietf.org/html/rfc4252">Secure Shell (SSH)</a></li>
+        <li class="protocol"><a href="http://tools.ietf.org/html/rfc959">File Transfer Protocol (FTP)</a></li>
+        <li class="protocol"><a href="http://tools.ietf.org/html/rfc2821">Simple Mail Transfer Protocol (SMTP)</a></li>
+        <li class="protocol"><a href="http://tools.ietf.org/html/rfc495">Telephone Network (Telnet)</a></li>
+        <li class="protocol"><a href="http://tools.ietf.org/html/rfc2616">HyperText Transfer Protocol (HTTP)</a></li>
+        <li class="protocol"><a href="https://tools.ietf.org/html/rfc2818">Secure HyperText Transfer Protocol (HTTPS)</a></li>
+        <li class="protocol"><a href="http://tools.ietf.org/html/draft-ietf-secsh-filexfer-13">Secure File Transfer Protocol (SFTP)</a></li>
+        <li class="protocol"><a href="http://tools.ietf.org/html/rfc6101">Secure Sockets Layer (SSL)</a></li>
+        <li class="protocol"><a href="http://tools.ietf.org/html/rfc5246">Transport Layer Security (TLS)</a></li>
+        <li class="protocol"><a href="http://tools.ietf.org/html/rfc1939">Post Office Protocol (POP)</a></li>
+        <li class="protocol"><a href="http://tools.ietf.org/html/rfc1035">Domain Name System (DNS)</a></li>
+        <li class="protocol"><a href="http://tools.ietf.org/html/rfc5905">Network Time Protocol (NTP)</a></li>
+        <li class="protocol"><a href="http://tools.ietf.org/html/rfc1459">Internet Relay Chat (IRC)</a></li>
+        <li class="protocol"><a href="http://tools.ietf.org/html/rfc4511">Lightweight Directory Access Protocol (LDAP)</a></li>
+      </ul>
+      <p>
+        An exhaustive list of protocols and their related specifications, ports and versions can be found in
+        <b><a href="http://en.wikipedia.org/wiki/List_of_TCP_and_UDP_port_numbers">Wikipedia</a></b>.
+      </p>
+    </article>
   </section>
   <section class="assignment-list">
   <h6>All Assignments</h6>
   <ul class="side-nav">
     <li class="divider"></li>
-    <li class="active"><a href="/wbim/">Assignment 1 - Launch of Portfoilo</a></li>    
+    <li class=""><a href="/wbim/">Assignment 1 - Launch of Portfoilo</a></li>    
     <li class="divider"></li>
     <li class=""><a href="/wbim/bpmn.html">Assignment 2 - Process Diagram using BPMN</a></li>
     <li class="divider"></li>
     <li class=""><a href="/wbim/quality.html">Assignment 3 - Information and Data Quality</a></li>
     <li class="divider"></li>
-    <li class=""><a href="/wbim/protocols.html">Assignment 4 - Internet Protocols and Standards</a></li>
+    <li class="active"><a href="/wbim/protocols.html">Assignment 4 - Internet Protocols and Standards</a></li>
     <li class="divider"></li>
   </ul>
 </section>
