--- a/wbim/quality.html
+++ b/wbim/quality.html
@@ -209,13 +209,15 @@
     <li class="divider"></li>
     <li class="active"><a href="/wbim/quality.html">Assignment 3 - Information and Data Quality</a></li>
     <li class="divider"></li>
+    <li class=""><a href="/wbim/protocols.html">Assignment 4 - Internet Protocols and Standards</a></li>
+    <li class="divider"></li>
   </ul>
 </section>
 </div>
     <footer>
   <b>&copy; 2013</b> Website Designed and Developed by <b>Abhra Basak</b>.<br/>
   All Trademarks belong to their respective Owners.<br/>
-  Site Last Updated On <b>2013-03-24</b>.
+  Site Last Updated On <b>2013-04-01</b>.
 </footer>
   </body>
 </html>
