Added assignments 5 and 6

--- a/wbim/modelling.html
+++ b/wbim/modelling.html
@@ -5,13 +5,13 @@
     <!-- Always force latest IE rendering engine or request Chrome Frame -->
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="title" content="Assignment 4 - Internet Protocols and Standards" />
+    <meta name="title" content="Assignment 6 - Modelling Techniques" />
     <meta name="author" content="Abhra Basak" />
     <meta name="description" content="My Personal Home Page" />
     <meta name="copyright" content="Abhra Basak, 2013" />
 
     <!-- Use title if it's in the page YAML frontmatter -->
-    <title>Assignment 4 - Internet Protocols and Standards | ABHRA BASAK</title>
+    <title>Assignment 6 - Modelling Techniques | ABHRA BASAK</title>
 
     <link href="/assets/stylesheets/application.css" media="screen" rel="stylesheet" type="text/css" />
     
@@ -24,7 +24,7 @@
     <link href="/assets/images/photo.jpg" rel="icon" type="image/jpg" />
   </head>
 
-  <body class="wbim wbim_protocols">
+  <body class="wbim wbim_modelling">
     <header>
 	<!-- Positioning the Top Bar -->
 	<div>
@@ -62,28 +62,20 @@
     <div class="assignment view">
   <section class="assignment-description">
     <article>
-      <h4>Assignment 4 - Internet Protocols and Standards</h4>
-      <p>Following are a list of some protocols and standards for the Internet and the web with their specification documents where applicable.</p>
-      <ul class="protocol-list">
-        <li class="protocol"><a href="http://tools.ietf.org/html/rfc4252">Secure Shell (SSH)</a></li>
-        <li class="protocol"><a href="http://tools.ietf.org/html/rfc959">File Transfer Protocol (FTP)</a></li>
-        <li class="protocol"><a href="http://tools.ietf.org/html/rfc2821">Simple Mail Transfer Protocol (SMTP)</a></li>
-        <li class="protocol"><a href="http://tools.ietf.org/html/rfc495">Telephone Network (Telnet)</a></li>
-        <li class="protocol"><a href="http://tools.ietf.org/html/rfc2616">HyperText Transfer Protocol (HTTP)</a></li>
-        <li class="protocol"><a href="https://tools.ietf.org/html/rfc2818">Secure HyperText Transfer Protocol (HTTPS)</a></li>
-        <li class="protocol"><a href="http://tools.ietf.org/html/draft-ietf-secsh-filexfer-13">Secure File Transfer Protocol (SFTP)</a></li>
-        <li class="protocol"><a href="http://tools.ietf.org/html/rfc6101">Secure Sockets Layer (SSL)</a></li>
-        <li class="protocol"><a href="http://tools.ietf.org/html/rfc5246">Transport Layer Security (TLS)</a></li>
-        <li class="protocol"><a href="http://tools.ietf.org/html/rfc1939">Post Office Protocol (POP)</a></li>
-        <li class="protocol"><a href="http://tools.ietf.org/html/rfc1035">Domain Name System (DNS)</a></li>
-        <li class="protocol"><a href="http://tools.ietf.org/html/rfc5905">Network Time Protocol (NTP)</a></li>
-        <li class="protocol"><a href="http://tools.ietf.org/html/rfc1459">Internet Relay Chat (IRC)</a></li>
-        <li class="protocol"><a href="http://tools.ietf.org/html/rfc4511">Lightweight Directory Access Protocol (LDAP)</a></li>
+      <h4>Assignment 6 - Modelling Techniques</h4>
+      <p>A modeling language is any artificial language that can be used to express information or knowledge or systems in a structure that is defined by a consistent set of rules. The rules are used for interpretation of the meaning of components in the structure.</p>
+      <p><b>Graphical modeling languages</b> use a diagram technique with named symbols that represent concepts and lines that connect the symbols and represent relationships and various other graphical notation to represent constraints.</p>
+      <p><b>Textual modeling languages</b> may use standardized keywords accompanied by parameters or natural language terms and phrases to make computer-interpretable expressions.</p>
+      <br/>
+      <p>The main modelling techniques are introduced below:</p>
+      <ul class="modelling">
+        <li class="technique"><b><a href="http://en.wikipedia.org/wiki/Entity%E2%80%93relationship_model">Entity-Relationship Model</a></b> : An ER model is an abstract way of describing a database. In the case of a relational database, which stores data in tables, some of the data in these tables point to data in other tables</li>
+        <li class="technique"><b><a href="http://en.wikipedia.org/wiki/Class_diagram">UML Class Diagram</a></b> : A class diagram in the Unified Modeling Language (UML) is a type of static structure diagram that describes the structure of a system by showing the system's classes, their attributes, operations (or methods), and the relationships among the classes.</li>
+        <li class="technique"><b><a href="http://en.wikipedia.org/wiki/Flowchart">Flowchart</a></b> : A flowchart is a type of diagram that represents an algorithm or process, showing the steps as boxes of various kinds, and their order by connecting them with arrows.</li>
+        <li class="technique"><b><a href="http://en.wikipedia.org/wiki/Data_flow_diagram">Data Flow Diagram</a></b> : A data flow diagram (DFD) is a graphical representation of the "flow" of data through an information system, modeling its process aspects.</li>
+        <li class="technique"><b><a href="http://en.wikipedia.org/wiki/Metamodeling">Metamodeling</a></b> : "Metamodeling" is the construction of a collection of "concepts" (things, terms, etc.) within a certain domain. A model is an abstraction of phenomena in the real world; a metamodel is yet another abstraction, highlighting properties of the model itself.</li>
       </ul>
-      <p>
-        An exhaustive list of protocols and their related specifications, ports and versions can be found in
-        <b><a href="http://en.wikipedia.org/wiki/List_of_TCP_and_UDP_port_numbers">Wikipedia</a></b>.
-      </p>
+      <p>More about Data Modelling can be found in <b><a href="http://en.wikipedia.org/wiki/Data_modeling">Wikipedia</a></b>.</p>
     </article>
   </section>
   <section class="assignment-list">
@@ -96,11 +88,11 @@
     <li class="divider"></li>
     <li class=""><a href="/wbim/quality.html">Assignment 3 - Information and Data Quality</a></li>
     <li class="divider"></li>
-    <li class="active"><a href="/wbim/protocols.html">Assignment 4 - Internet Protocols and Standards</a></li>
+    <li class=""><a href="/wbim/protocols.html">Assignment 4 - Internet Protocols and Standards</a></li>
     <li class="divider"></li>
     <li class=""><a href="/wbim/categorisation.html">Assignment 5 - Categorisation of WBIS</a></li>
     <li class="divider"></li>
-    <li class=""><a href="/wbim/modelling.html">Assignment 6 - Modelling Techniques</a></li>
+    <li class="active"><a href="/wbim/modelling.html">Assignment 6 - Modelling Techniques</a></li>
     <li class="divider"></li>
   </ul>
 </section>
