--- a/wbim/categorisation.html
+++ b/wbim/categorisation.html
@@ -5,13 +5,13 @@
     <!-- Always force latest IE rendering engine or request Chrome Frame -->
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="title" content="Assignment 4 - Internet Protocols and Standards" />
+    <meta name="title" content="Assignment 5 - Categorisation of WBIS" />
     <meta name="author" content="Abhra Basak" />
     <meta name="description" content="My Personal Home Page" />
     <meta name="copyright" content="Abhra Basak, 2013" />
 
     <!-- Use title if it's in the page YAML frontmatter -->
-    <title>Assignment 4 - Internet Protocols and Standards | ABHRA BASAK</title>
+    <title>Assignment 5 - Categorisation of WBIS | ABHRA BASAK</title>
 
     <link href="/assets/stylesheets/application.css" media="screen" rel="stylesheet" type="text/css" />
     
@@ -24,7 +24,7 @@
     <link href="/assets/images/photo.jpg" rel="icon" type="image/jpg" />
   </head>
 
-  <body class="wbim wbim_protocols">
+  <body class="wbim wbim_categorisation">
     <header>
 	<!-- Positioning the Top Bar -->
 	<div>
@@ -62,28 +62,32 @@
     <div class="assignment view">
   <section class="assignment-description">
     <article>
-      <h4>Assignment 4 - Internet Protocols and Standards</h4>
-      <p>Following are a list of some protocols and standards for the Internet and the web with their specification documents where applicable.</p>
-      <ul class="protocol-list">
-        <li class="protocol"><a href="http://tools.ietf.org/html/rfc4252">Secure Shell (SSH)</a></li>
-        <li class="protocol"><a href="http://tools.ietf.org/html/rfc959">File Transfer Protocol (FTP)</a></li>
-        <li class="protocol"><a href="http://tools.ietf.org/html/rfc2821">Simple Mail Transfer Protocol (SMTP)</a></li>
-        <li class="protocol"><a href="http://tools.ietf.org/html/rfc495">Telephone Network (Telnet)</a></li>
-        <li class="protocol"><a href="http://tools.ietf.org/html/rfc2616">HyperText Transfer Protocol (HTTP)</a></li>
-        <li class="protocol"><a href="https://tools.ietf.org/html/rfc2818">Secure HyperText Transfer Protocol (HTTPS)</a></li>
-        <li class="protocol"><a href="http://tools.ietf.org/html/draft-ietf-secsh-filexfer-13">Secure File Transfer Protocol (SFTP)</a></li>
-        <li class="protocol"><a href="http://tools.ietf.org/html/rfc6101">Secure Sockets Layer (SSL)</a></li>
-        <li class="protocol"><a href="http://tools.ietf.org/html/rfc5246">Transport Layer Security (TLS)</a></li>
-        <li class="protocol"><a href="http://tools.ietf.org/html/rfc1939">Post Office Protocol (POP)</a></li>
-        <li class="protocol"><a href="http://tools.ietf.org/html/rfc1035">Domain Name System (DNS)</a></li>
-        <li class="protocol"><a href="http://tools.ietf.org/html/rfc5905">Network Time Protocol (NTP)</a></li>
-        <li class="protocol"><a href="http://tools.ietf.org/html/rfc1459">Internet Relay Chat (IRC)</a></li>
-        <li class="protocol"><a href="http://tools.ietf.org/html/rfc4511">Lightweight Directory Access Protocol (LDAP)</a></li>
+      <h4>Assignment 5 - Categorisation of WBIS</h4>
+      <p>There are different ways of categorizing Web Based Information Systems : </p>
+      <ul class="categorisation">
+        <li class="criterion">Based on <i>Function</i></li>
+        <li class="criterion">Based on <i>Organizational / Operational Role</i></li>
+        <li class="criterion">Based on <i>System Properties</i></li>
       </ul>
-      <p>
-        An exhaustive list of protocols and their related specifications, ports and versions can be found in
-        <b><a href="http://en.wikipedia.org/wiki/List_of_TCP_and_UDP_port_numbers">Wikipedia</a></b>.
-      </p>
+      <p>However, the above categorisation system can be improved by specialising into 3 distinct levels : </p>
+      <h6>Level 1</h6>
+      <ul class="categorisation">
+        <li class="criterion"><b>Small Scale</b> : It refers to an organization which might have a single branch in a particular country.</li>
+        <li class="criterion"><b>Medium Scale</b> : Identical to above.</li>
+        <li class="criterion"><b>Large Scale</b> : It refers to a MNC which has multiple branches in multiple countries.</li>
+      </ul>
+      <h6>Level 2</h6>
+      <ul class="categorisation">
+        <li class="criterion"><b>Manual</b> : Booking a ticket in the bus by paying the fee to the conductor and getting the ticket in return is an example.</li>
+        <li class="criterion"><b>Automatic</b> : Online flight booking or the working of an ATM are very good examples of an automated system.</li>
+        <li class="criterion"><b>Manual + Automatic</b> : Cash deposition in a bank which involves some manual paperwork followed by automated data entry via computer.</li>
+      </ul>
+      <h6>Level 3</h6>
+      <ul class="categorisation">
+        <li class="criterion"><b>Complexity</b> : a less complex system is easy to play with and therefore more beneficial for the user.</li>
+        <li class="criterion"><b>Adaptability</b> : A system that can incorporate the user feedback easily and therefore further enhance the system to a better level.</li>
+        <li class="criterion"><b>Interactive</b> : The more interactive a system is, the more easily the user can communicate with the system and exchange information.</li>
+      </ul>
     </article>
   </section>
   <section class="assignment-list">
@@ -96,9 +100,9 @@
     <li class="divider"></li>
     <li class=""><a href="/wbim/quality.html">Assignment 3 - Information and Data Quality</a></li>
     <li class="divider"></li>
-    <li class="active"><a href="/wbim/protocols.html">Assignment 4 - Internet Protocols and Standards</a></li>
+    <li class=""><a href="/wbim/protocols.html">Assignment 4 - Internet Protocols and Standards</a></li>
     <li class="divider"></li>
-    <li class=""><a href="/wbim/categorisation.html">Assignment 5 - Categorisation of WBIS</a></li>
+    <li class="active"><a href="/wbim/categorisation.html">Assignment 5 - Categorisation of WBIS</a></li>
     <li class="divider"></li>
     <li class=""><a href="/wbim/modelling.html">Assignment 6 - Modelling Techniques</a></li>
     <li class="divider"></li>
