--- a/wbim/index.html
+++ b/wbim/index.html
@@ -71,7 +71,7 @@
   <h6>All Assignments</h6>
   <ul class="side-nav">
     <li class="divider"></li>
-    <li class="active"><a href="/wbim/">Assignment 1 - Launch of Portfoilo</a></li>    
+    <li class="active"><a href="/wbim/">Assignment 1 - Launch of Portfoilo</a></li>
     <li class="divider"></li>
     <li class=""><a href="/wbim/bpmn.html">Assignment 2 - Process Diagram using BPMN</a></li>
     <li class="divider"></li>
@@ -79,13 +79,17 @@
     <li class="divider"></li>
     <li class=""><a href="/wbim/protocols.html">Assignment 4 - Internet Protocols and Standards</a></li>
     <li class="divider"></li>
+    <li class=""><a href="/wbim/categorisation.html">Assignment 5 - Categorisation of WBIS</a></li>
+    <li class="divider"></li>
+    <li class=""><a href="/wbim/modelling.html">Assignment 6 - Modelling Techniques</a></li>
+    <li class="divider"></li>
   </ul>
 </section>
 </div>
     <footer>
   <b>&copy; 2013</b> Website Designed and Developed by <b>Abhra Basak</b>.<br/>
   All Trademarks belong to their respective Owners.<br/>
-  Site Last Updated On <b>2013-04-01</b>.
+  Site Last Updated On <b>2013-05-11</b>.
 </footer>
   </body>
 </html>
