Assignment 8 uploaded, 7 is pending

--- a/wbim/bpmn.html
+++ b/wbim/bpmn.html
@@ -155,13 +155,17 @@
     <li class="divider"></li>
     <li class=""><a href="/wbim/modelling.html">Assignment 6 - Modelling Techniques</a></li>
     <li class="divider"></li>
+    <li class=""><a href="#">Assignment 7 - Assignment Pending</a></li>
+    <li class="divider"></li>
+    <li class=""><a href="/wbim/knowledge.html">Assignment 8 - Knowledge Representation</a></li>
+    <li class="divider"></li>
   </ul>
 </section>
 </div>
     <footer>
   <b>&copy; 2013</b> Website Designed and Developed by <b>Abhra Basak</b>.<br/>
   All Trademarks belong to their respective Owners.<br/>
-  Site Last Updated On <b>2013-05-11</b>.
+  Site Last Updated On <b>2013-06-05</b>.
 </footer>
   </body>
 </html>
