--- a/wbim/knowledge.html
+++ b/wbim/knowledge.html
@@ -5,13 +5,13 @@
     <!-- Always force latest IE rendering engine or request Chrome Frame -->
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="title" content="Assignment 5 - Categorisation of WBIS" />
+    <meta name="title" content="Assignment 8 - Knowledge Representation" />
     <meta name="author" content="Abhra Basak" />
     <meta name="description" content="My Personal Home Page" />
     <meta name="copyright" content="Abhra Basak, 2013" />
 
     <!-- Use title if it's in the page YAML frontmatter -->
-    <title>Assignment 5 - Categorisation of WBIS | ABHRA BASAK</title>
+    <title>Assignment 8 - Knowledge Representation | ABHRA BASAK</title>
 
     <link href="/assets/stylesheets/application.css" media="screen" rel="stylesheet" type="text/css" />
     
@@ -24,7 +24,7 @@
     <link href="/assets/images/photo.jpg" rel="icon" type="image/jpg" />
   </head>
 
-  <body class="wbim wbim_categorisation">
+  <body class="wbim wbim_knowledge">
     <header>
 	<!-- Positioning the Top Bar -->
 	<div>
@@ -62,32 +62,32 @@
     <div class="assignment view">
   <section class="assignment-description">
     <article>
-      <h4>Assignment 5 - Categorisation of WBIS</h4>
-      <p>There are different ways of categorizing Web Based Information Systems : </p>
-      <ul class="categorisation">
-        <li class="criterion">Based on <i>Function</i></li>
-        <li class="criterion">Based on <i>Organizational / Operational Role</i></li>
-        <li class="criterion">Based on <i>System Properties</i></li>
+      <h4>Assignment 8 - Knowledge Representation</h4>
+      <h6>Knowledge Domain - Compiling a piece of C code</h6>
+      <p>This consists of checking the syntactical validity of the C code as per standard guidelines</p>
+      <h6>Knowledge Representation</h6>
+      <p>The best form of representation for the above scenario is in the form of <b>Production Rules</b>.</p>
+      <p>To generate a string in the language, one begins with a string consisting of only a single start symbol, and then successively applies the rules (any number of times, in any order) to rewrite this string. This stops when we obtain a string containing only terminals. The language consists of all the strings that can be generated in this manner. Any particular sequence of legal choices taken during this rewriting process yields one particular string in the language. If there are multiple different ways of generating this single string, then the grammar is said to be ambiguous.</p>
+
+      <p>The advantages of Production Rules for my knowledge domain are:</p>
+      <ol class="advantages">
+        <li class="advantage">Very easy to understand and apply.</li>
+        <li class="advantage">Its implementation is straightforward in computer therefore automating the process.</li>
+        <li class="advantage">A formal definition in form of BNF includes metalanguage for the definition of language syntax.</li>
+        <li class="advantage">Most importantly, it focuses only on the syntactic description of the language.</li>
+      </ol>
+    </article>
+
+    <article>
+      <h6>Logic</h6>
+      <p>Apart from the above form of Knowledge Representation, other forms such as <b>Logic</b> can also be applied.</p>
+      <p>It mainly has two parts to knowledge representation language:</p>
+      <ul class="language-parts">
+        <li class="part"><b>Syntax</b> – It describes the possible configurations that can constitute sentences.</li>
+        <li class="part"><b>Semantics</b> – It determines the facts in the world to which the sentences refer and also tells us what the agent believes.</li>
       </ul>
-      <p>However, the above categorisation system can be improved by specialising into 3 distinct levels : </p>
-      <h6>Level 1</h6>
-      <ul class="categorisation">
-        <li class="criterion"><b>Small Scale</b> : It refers to an organization which might have a single branch in a particular country.</li>
-        <li class="criterion"><b>Medium Scale</b> : Identical to above.</li>
-        <li class="criterion"><b>Large Scale</b> : It refers to a MNC which has multiple branches in multiple countries.</li>
-      </ul>
-      <h6>Level 2</h6>
-      <ul class="categorisation">
-        <li class="criterion"><b>Manual</b> : Booking a ticket in the bus by paying the fee to the conductor and getting the ticket in return is an example.</li>
-        <li class="criterion"><b>Automatic</b> : Online flight booking or the working of an ATM are very good examples of an automated system.</li>
-        <li class="criterion"><b>Manual + Automatic</b> : Cash deposition in a bank which involves some manual paperwork followed by automated data entry via computer.</li>
-      </ul>
-      <h6>Level 3</h6>
-      <ul class="categorisation">
-        <li class="criterion"><b>Complexity</b> : a less complex system is easy to play with and therefore more beneficial for the user.</li>
-        <li class="criterion"><b>Adaptability</b> : A system that can incorporate the user feedback easily and therefore further enhance the system to a better level.</li>
-        <li class="criterion"><b>Interactive</b> : The more interactive a system is, the more easily the user can communicate with the system and exchange information.</li>
-      </ul>
+      <p>For my Knowledge Domain, the first part i.e. Syntax is more important. So, in the compiler that will compile the C – code, the syntax for various entities of C – language should be defined. For example, a variable name should not start with a number or special character. Similarly, every line of C terminates with a semicolon.</p>
+      <p>So, as per my understanding, Production Rule will help to focus at the ground level of defining the syntactical rules for compiling C – code which includes grammar, metalanguage etc. Whereas, Logic which contains two parts i.e. Syntax and Semantics will help me to look at the compiling issue from a higher level.</p>
     </article>
   </section>
   <section class="assignment-list">
@@ -102,13 +102,13 @@
     <li class="divider"></li>
     <li class=""><a href="/wbim/protocols.html">Assignment 4 - Internet Protocols and Standards</a></li>
     <li class="divider"></li>
-    <li class="active"><a href="/wbim/categorisation.html">Assignment 5 - Categorisation of WBIS</a></li>
+    <li class=""><a href="/wbim/categorisation.html">Assignment 5 - Categorisation of WBIS</a></li>
     <li class="divider"></li>
     <li class=""><a href="/wbim/modelling.html">Assignment 6 - Modelling Techniques</a></li>
     <li class="divider"></li>
     <li class=""><a href="#">Assignment 7 - Assignment Pending</a></li>
     <li class="divider"></li>
-    <li class=""><a href="/wbim/knowledge.html">Assignment 8 - Knowledge Representation</a></li>
+    <li class="active"><a href="/wbim/knowledge.html">Assignment 8 - Knowledge Representation</a></li>
     <li class="divider"></li>
   </ul>
 </section>
