Added temple assignment

--- a/wbim/temples.html
+++ b/wbim/temples.html
@@ -5,13 +5,13 @@
     <!-- Always force latest IE rendering engine or request Chrome Frame -->
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="title" content="Assignment 5 - Categorisation of WBIS" />
+    <meta name="title" content="Assignment 9 - Mandi Temples" />
     <meta name="author" content="Abhra Basak" />
     <meta name="description" content="My Personal Home Page" />
     <meta name="copyright" content="Abhra Basak, 2013" />
 
     <!-- Use title if it's in the page YAML frontmatter -->
-    <title>Assignment 5 - Categorisation of WBIS | ABHRA BASAK</title>
+    <title>Assignment 9 - Mandi Temples | ABHRA BASAK</title>
 
     <link href="/assets/stylesheets/application.css" media="screen" rel="stylesheet" type="text/css" />
     
@@ -24,7 +24,7 @@
     <link href="/assets/images/photo.jpg" rel="icon" type="image/jpg" />
   </head>
 
-  <body class="wbim wbim_categorisation">
+  <body class="wbim wbim_temples">
     <header>
 	<!-- Positioning the Top Bar -->
 	<div>
@@ -62,32 +62,15 @@
     <div class="assignment view">
   <section class="assignment-description">
     <article>
-      <h4>Assignment 5 - Categorisation of WBIS</h4>
-      <p>There are different ways of categorizing Web Based Information Systems : </p>
-      <ul class="categorisation">
-        <li class="criterion">Based on <i>Function</i></li>
-        <li class="criterion">Based on <i>Organizational / Operational Role</i></li>
-        <li class="criterion">Based on <i>System Properties</i></li>
+      <h4>Assignment 9 - Mandi Temples</h4>
+      <p>Following are a list of some temples in Mandi we visited and documented.</p>
+      <ul class="temples-list">
+        <li class="temple"><b><a href="https://sites.google.com/site/manditemples/temples-list/baglamukhi-temple">BagalaMukhi Temple</a></b></li>
       </ul>
-      <p>However, the above categorisation system can be improved by specialising into 3 distinct levels : </p>
-      <h6>Level 1</h6>
-      <ul class="categorisation">
-        <li class="criterion"><b>Small Scale</b> : It refers to an organization which might have a single branch in a particular country.</li>
-        <li class="criterion"><b>Medium Scale</b> : Identical to above.</li>
-        <li class="criterion"><b>Large Scale</b> : It refers to a MNC which has multiple branches in multiple countries.</li>
-      </ul>
-      <h6>Level 2</h6>
-      <ul class="categorisation">
-        <li class="criterion"><b>Manual</b> : Booking a ticket in the bus by paying the fee to the conductor and getting the ticket in return is an example.</li>
-        <li class="criterion"><b>Automatic</b> : Online flight booking or the working of an ATM are very good examples of an automated system.</li>
-        <li class="criterion"><b>Manual + Automatic</b> : Cash deposition in a bank which involves some manual paperwork followed by automated data entry via computer.</li>
-      </ul>
-      <h6>Level 3</h6>
-      <ul class="categorisation">
-        <li class="criterion"><b>Complexity</b> : a less complex system is easy to play with and therefore more beneficial for the user.</li>
-        <li class="criterion"><b>Adaptability</b> : A system that can incorporate the user feedback easily and therefore further enhance the system to a better level.</li>
-        <li class="criterion"><b>Interactive</b> : The more interactive a system is, the more easily the user can communicate with the system and exchange information.</li>
-      </ul>
+      <p>
+        An exhaustive list of Mandi temples under documentation can be found in
+        <b><a href="https://sites.google.com/site/manditemples/system/app/pages/subPages?path=/temples-list">Mandi Temples</a></b>.
+      </p>
     </article>
   </section>
   <section class="assignment-list">
@@ -102,7 +85,7 @@
     <li class="divider"></li>
     <li class=""><a href="/wbim/protocols.html">Assignment 4 - Internet Protocols and Standards</a></li>
     <li class="divider"></li>
-    <li class="active"><a href="/wbim/categorisation.html">Assignment 5 - Categorisation of WBIS</a></li>
+    <li class=""><a href="/wbim/categorisation.html">Assignment 5 - Categorisation of WBIS</a></li>
     <li class="divider"></li>
     <li class=""><a href="/wbim/modelling.html">Assignment 6 - Modelling Techniques</a></li>
     <li class="divider"></li>
@@ -110,7 +93,7 @@
     <li class="divider"></li>
     <li class=""><a href="/wbim/knowledge.html">Assignment 8 - Knowledge Representation</a></li>
     <li class="divider"></li>
-    <li class=""><a href="/wbim/temples.html">Assignment 9 - Mandi Temples</a></li>
+    <li class="active"><a href="/wbim/temples.html">Assignment 9 - Mandi Temples</a></li>
     <li class="divider"></li>
   </ul>
 </section>
