--- a/wbim/knowledge.html
+++ b/wbim/knowledge.html
@@ -110,13 +110,15 @@
     <li class="divider"></li>
     <li class="active"><a href="/wbim/knowledge.html">Assignment 8 - Knowledge Representation</a></li>
     <li class="divider"></li>
+    <li class=""><a href="/wbim/temples.html">Assignment 9 - Mandi Temples</a></li>
+    <li class="divider"></li>
   </ul>
 </section>
 </div>
     <footer>
   <b>&copy; 2013</b> Website Designed and Developed by <b>Abhra Basak</b>.<br/>
   All Trademarks belong to their respective Owners.<br/>
-  Site Last Updated On <b>2013-06-05</b>.
+  Site Last Updated On <b>2013-06-08</b>.
 </footer>
   </body>
 </html>
