Added new temples to assignment

--- a/wbim/temples.html
+++ b/wbim/temples.html
@@ -66,6 +66,8 @@
       <p>Following are a list of some temples in Mandi we visited and documented.</p>
       <ul class="temples-list">
         <li class="temple"><b><a href="https://sites.google.com/site/manditemples/temples-list/baglamukhi-temple">BagalaMukhi Temple</a></b></li>
+        <li class="temple"><b><a href="https://sites.google.com/site/manditemples/temples-list/mahakali-temple">Mahakali Temple</a></b></li>
+        <li class="temple"><b><a href="https://sites.google.com/site/manditemples/temples-list/ramchandra">Ramchandra Temple</a></b></li>
       </ul>
       <p>
         An exhaustive list of Mandi temples under documentation can be found in
@@ -101,7 +103,7 @@
     <footer>
   <b>&copy; 2013</b> Website Designed and Developed by <b>Abhra Basak</b>.<br/>
   All Trademarks belong to their respective Owners.<br/>
-  Site Last Updated On <b>2013-06-08</b>.
+  Site Last Updated On <b>2013-06-20</b>.
 </footer>
   </body>
 </html>
