Site ready for new domain, with projects and skills

--- a/index.html
+++ b/index.html
@@ -72,8 +72,11 @@
     </p>
     <p>
       I'm always looking for ideas that might make my work more creative. I'm especially interested in Computer
-      Technologies and the Web. That's why I've decided to get deeply involved in
-      Web Development, which is my main focus today, and that it will be hopefully in the long term.
+      Technologies and the Web. That's why I've decided to get primarily involved in Software Development, particularly Web-based.
+      It is my main focus today, and it will remain so hopefully in the long term.
+    </p>
+    <p>
+      I have also recently undertaken an internship at <b><a href="http://microsoft.com">Microsoft</a></b> IDC (Hyderabad), in <b><a href="http://bing.com">Bing</a></b> Tech-Segments, who have gladly extended a full-time offer to me. My dream of joining Microsoft one day has finally come true.
     </p>
   </section>
   <section class="home-social">
@@ -99,7 +102,7 @@
     <footer>
   <b>&copy; 2013</b> Website Designed and Developed by <b>Abhra Basak</b>.<br/>
   All Trademarks belong to their respective Owners.<br/>
-  Site Last Updated On <b>2013-08-25</b>.
+  Site Last Updated On <b>2013-08-27</b>.
 </footer>
   </body>
 </html>
