--- a/contact.html
+++ b/contact.html
@@ -60,7 +60,7 @@
 </header>
     <div class="contact view">
   <section class="contact-intro">
-    <h4>Get in Touch</h4>
+    <h4>Get in Touch for a Project or Coffee</h4>
     <p>
       So you want to contact me, right? Well, let's see. If you want to say hello, ask a question or
       share your thoughts, and succeed in the task of filling out the form to the right then you might just
@@ -74,7 +74,7 @@
       else, type away, my friends. Type away!
     </p>
     <p>
-      Not a contact form person? Feel free to find me on Facebook, Linkedin, or Twitter.
+      Not a contact form person? Use the icons below to track me around the world. It's not too hard to find me.
     </p>
     <p>
       
@@ -109,7 +109,7 @@
     <footer>
   <b>&copy; 2013</b> Website Designed and Developed by <b>Abhra Basak</b>.<br/>
   All Trademarks belong to their respective Owners.<br/>
-  Site Last Updated On <b>2013-08-25</b>.
+  Site Last Updated On <b>2013-08-27</b>.
 </footer>
   </body>
 </html>
