Changed skills to about

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <li class="divider"></li>
 					<li><a href="/">Home</a></li>
           <li class="divider"></li>
-					<li><a href="/skills.html">Skills</a></li>
+					<li><a href="/about.html">About</a></li>
           <li class="divider"></li>
 					<li><a href="/projects.html">Projects</a></li>
           <li class="divider"></li>
@@ -68,7 +68,7 @@
       My name is ABHRA BASAK. I am a 21-year old Computer Science Undergraduate
       in <b><a href="http://iitmandi.ac.in">IIT Mandi</a></b> (living in Kolkata).
       I am passionate about Web Technologies, and also enjoy Programming, Football, Mathematics, Action Movies and Pop Music.
-      This is my cool website made with style.
+      This is my cool website that depicts me with style.
     </p>
     <p>
       I'm always looking for ideas that might make my work more creative. I'm especially interested in Computer
