--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
           <li class="divider"></li>
 					<li><a href="/">Home</a></li>
           <li class="divider"></li>
-					<li><a href="/skills.html">Skills</a></li>
+					<li><a href="/about.html">About</a></li>
           <li class="divider"></li>
 					<li><a href="/projects.html">Projects</a></li>
           <li class="divider"></li>
@@ -60,7 +60,7 @@
 </header>
     <div class="contact view">
   <section class="contact-intro">
-    <h4>Get in Touch for a Project or Coffee</h4>
+    <h4>Get in Touch for a Project or Coffee - or just say Hello</h4>
     <p>
       So you want to contact me, right? Well, let's see. If you want to say hello, ask a question or
       share your thoughts, and succeed in the task of filling out the form to the right then you might just
