--- a/projects.html
+++ b/projects.html
@@ -39,7 +39,7 @@
           <li class="divider"></li>
 					<li><a href="/">Home</a></li>
           <li class="divider"></li>
-					<li><a href="/skills.html">Skills</a></li>
+					<li><a href="/about.html">About</a></li>
           <li class="divider"></li>
 					<li><a href="/projects.html">Projects</a></li>
           <li class="divider"></li>
