Imporved contacts page, and added items to other pages

--- a/credits.html
+++ b/credits.html
@@ -74,7 +74,7 @@
     <ul>
       <li><a href="http://jquery.com">jQuery</a></li>
       <li><a href="http://zurb.com/playground/foundation-icon-fonts-3">Foundation Icon Fonts</a></li>
-      <li><a href="http://zurb.com/playground/social-webicons">Social Web foundation-icons</a></li>
+      <li><a href="http://zurb.com/playground/social-webicons">Social Web Icons</a></li>
       <li><a href="http://sass-lang.com">SASS</a></li>
       <li><a href="http://jashkenas.github.com/coffee-script">CoffeeScript</a></li>
       <li><a href="http://html5.org">HTML5</a></li>
@@ -84,7 +84,7 @@
     <footer>
   <b>&copy; 2013</b> Website Designed and Developed by <b>Abhra Basak</b>.<br/>
   All Trademarks belong to their respective Owners.<br/>
-  Site Last Updated On <b>2013-08-28</b>.
+  Site Last Updated On <b>2013-09-02</b>.
 </footer>
   </body>
 </html>
