Made a few changes in Index and About

--- a/about.html
+++ b/about.html
@@ -71,8 +71,8 @@
       An interesting piece of trivia, I'm also deeply dedicated to music and mixes, especially those involving drums.
     </p>
     <p>
-      I have also been a coordinator of the Website Information and Networks Group (WING) at IIT Mandi
-      for about 2 years, where I learnt interesting stuff about computers and the Web.
+      I have also been a coordinator of the <a href="http://facebook.com/wing.iitmandi">Website Information and Networks Group</a>
+      (WING) at IIT Mandi for about 2 years, where I learnt interesting stuff about computers and the Web.
     </p>
   </section>
   <section class="dev-graph">
@@ -143,7 +143,7 @@
     <footer>
   <b>&copy; 2013</b> Website Designed and Developed by <b>Abhra Basak</b>.<br/>
   All Trademarks belong to their respective Owners.<br/>
-  Site Last Updated On <b>2013-09-02</b>.
+  Site Last Updated On <b>2013-09-10</b>.
 </footer>
   </body>
 </html>
