--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       My name is ABHRA BASAK. I am a 21-year old Computer Science Undergraduate
       in <b><a href="http://iitmandi.ac.in">IIT Mandi</a></b> (living in Kolkata).
       I am passionate about Web Technologies, and also enjoy Programming, Football, Mathematics, Action Movies and Pop Music.
-      This is my cool website that depicts me with style.
+      I'm glad you visited my website. Have a look around.
     </p>
     <p>
       I'm always looking for ideas that might make my work more creative. I'm especially interested in Computer
@@ -103,7 +103,7 @@
     <footer>
   <b>&copy; 2013</b> Website Designed and Developed by <b>Abhra Basak</b>.<br/>
   All Trademarks belong to their respective Owners.<br/>
-  Site Last Updated On <b>2013-09-02</b>.
+  Site Last Updated On <b>2013-09-10</b>.
 </footer>
   </body>
 </html>
