Upgrades, and project links

--- a/contact.html
+++ b/contact.html
@@ -61,10 +61,10 @@
 </header>
     <div class="contact view">
   <section class="contact-intro">
-    <h4>Get in Touch for a Project or a Coffee - or just say Hello</h4>
+    <h4>Get in Touch for Thoughts over a Coffee - or just say Hello</h4>
     <p>
       So you want to contact me, right? Well, let's see. If you want to say hello, ask a question or share your thoughts,
-      and succeed in the task of filling out an <a class="email-link" href="mailto:abhra.1992@live.com">EMAIL</a>
+      and succeed in the task of filling out an <a class="email-link" href="mailto:me@abhra.in">EMAIL</a>
       form then you might just be able to do exactly that. I'll receive your message, read it, tear it up and throw
       it dramatically into the fire. Oh, and then I'll respond, of course.
     </p>
@@ -95,13 +95,13 @@
     </p>
   </section>
   <section class="email">
-    <a class="mail-logo" href="mailto:abhra.1992@live.com"><img src="/assets/images/mail.png" /></a>
+    <a class="mail-logo" href="mailto:me@abhra.in"><img src="/assets/images/mail.png" /></a>
   </section>
 </div>
     <footer>
   <b>&copy; 2013</b> Website Designed and Developed by <b>Abhra Basak</b>.<br/>
   All Trademarks belong to their respective Owners.<br/>
-  Site Last Updated On <b>2013-09-10</b>.
+  Site Last Updated On <b>2013-10-30</b>.
 </footer>
   </body>
 </html>
