--- a/projects.html
+++ b/projects.html
@@ -4,13 +4,12 @@
     <meta charset="utf-8">
     <!-- Always force latest IE rendering engine or request Chrome Frame -->
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="content-language" content="en-in">
     <meta name="title" content="Projects" />
     <meta name="author" content="Abhra Basak" />
     <meta name="description" content="Abhra Basak's Personal Website" />
     <meta name="copyright" content="Abhra Basak, 2013" />
-
     <!-- Use title if it's in the page YAML frontmatter -->
     <title>Projects | ABHRA BASAK</title>
 
@@ -134,7 +133,14 @@
     <footer>
   <b>&copy; 2013</b> Website Designed and Developed by <b>Abhra Basak</b>.<br/>
   All Trademarks belong to their respective Owners.<br/>
-  Site Last Updated On <b>2013-10-30</b>.
+  Site Last Updated On <b>2013-12-15</b>.
 </footer>
+
+    <script src="/assets/javascripts/foundation.min.js" type="text/javascript"></script>
+    <script type="text/javascript">
+        $(document).ready(function() {
+          $(document).foundation();
+        });
+    </script>
   </body>
 </html>
