--- a/projects.html
+++ b/projects.html
@@ -65,7 +65,7 @@
     </p>
   </section>
   <section class="project-articles">
-    <ul class="small-block-grid-2 large-block-grid-3 articles-list">
+    <ul class="articles-list">
       
       <li class="panel radius project">
         <i><a class="project-url" href="#">Music Library Manager</a></i>
@@ -133,7 +133,7 @@
     <footer>
   <b>&copy; 2013</b> Website Designed and Developed by <b>Abhra Basak</b>.<br/>
   All Trademarks belong to their respective Owners.<br/>
-  Site Last Updated On <b>2013-12-15</b>.
+  Site Last Updated On <b>2013-12-24</b>.
 </footer>
 
     <script src="/assets/javascripts/foundation.min.js" type="text/javascript"></script>
