Some changes in skills + Upgrade Foundation

--- a/about.html
+++ b/about.html
@@ -44,7 +44,9 @@
           <li class="divider"></li>
 					<li><a href="/projects.html">Projects</a></li>
           <li class="divider"></li>
-					<li><a href="#">Blog</a></li>
+          <li><a href="/code.html">Code</a></li>
+          <!-- <li class="divider"></li>
+					<li><a href="#">Blog</a></li> -->
           <li class="divider"></li>
 					<li><a href="/contact.html">Contact</a></li>
           <li class="divider"></li>
@@ -101,10 +103,9 @@
     <footer>
   <b>&copy; 2013</b> Website Designed and Developed by <b>Abhra Basak</b>.<br/>
   All Trademarks belong to their respective Owners.<br/>
-  Site Last Updated On <b>2013-12-24</b>.
+  Site Last Updated On <b>2014-01-18</b>.
 </footer>
 
-    <script src="/assets/javascripts/foundation.min.js" type="text/javascript"></script>
     <script type="text/javascript">
         $(document).ready(function() {
           $(document).foundation();
