--- a/contact.html
+++ b/contact.html
@@ -45,14 +45,14 @@
 					<li><a href="/projects.html">Projects</a></li>
           <li class="divider"></li>
           <li><a href="/code.html">Code</a></li>
-          <!-- <li class="divider"></li>
-					<li><a href="#">Blog</a></li> -->
           <li class="divider"></li>
-					<li><a href="/contact.html">Contact</a></li>
+					<li><a href="/blog.html">Blog</a></li>
           <li class="divider"></li>
 				</ul>
 
 				<ul class="right">
+          <li class="divider"></li>
+          <li><a href="/contact.html">Contact</a></li>
           <li class="divider"></li>
 					<li><a href="/credits.html">Credits</a></li>
 				</ul>
@@ -60,13 +60,13 @@
 		</nav>
 	</div>
 </header>
-    <div class="contact view">
+    <main class="contact view">
   <section class="contact-intro">
     <h4>Get in Touch for Thoughts over a Coffee - or just say Hello</h4>
     <p>
       So you want to contact me, right? Well, let's see. If you want to say hello, ask a question or share your thoughts,
-      and succeed in the task of filling out an <a class="email-link" href="mailto:me@abhra.in">EMAIL</a>
-      form then you might just be able to do exactly that. I'll receive your message, read it, tear it up and throw
+      and succeed in the task of drafting an <a class="email-link" href="mailto:me@abhra.in">EMAIL</a>
+      then you might just be able to do exactly that. I'll receive your message, read it, tear it up and throw
       it dramatically into the fire. Oh, and then I'll respond, of course.
     </p>
     <p>
@@ -96,11 +96,10 @@
   <section class="email">
     <a class="mail-logo" href="mailto:me@abhra.in"><img src="/assets/images/mail.png" /></a>
   </section>
-</div>
+</main>
     <footer>
   <b>&copy; 2013</b> Website Designed and Developed by <b>Abhra Basak</b>.<br/>
-  All Trademarks belong to their respective Owners.<br/>
-  Site Last Updated On <b>2014-01-18</b>.
+  Last Updated - <b>2014-02-14</b>.
 </footer>
 
     <script type="text/javascript">
