--- a/middleman.html
+++ b/middleman.html
@@ -42,14 +42,14 @@
 					<li><a href="/projects.html">Projects</a></li>
           <li class="divider"></li>
           <li><a href="/code.html">Code</a></li>
-          <!-- <li class="divider"></li>
-					<li><a href="#">Blog</a></li> -->
           <li class="divider"></li>
-					<li><a href="/contact.html">Contact</a></li>
+					<li><a href="/blog.html">Blog</a></li>
           <li class="divider"></li>
 				</ul>
 
 				<ul class="right">
+          <li class="divider"></li>
+          <li><a href="/contact.html">Contact</a></li>
           <li class="divider"></li>
 					<li><a href="/credits.html">Credits</a></li>
 				</ul>
@@ -65,8 +65,7 @@
 </div><!-- .welcome -->
     <footer>
   <b>&copy; 2013</b> Website Designed and Developed by <b>Abhra Basak</b>.<br/>
-  All Trademarks belong to their respective Owners.<br/>
-  Site Last Updated On <b>2014-01-18</b>.
+  Last Updated - <b>2014-02-14</b>.
 </footer>
 
     <script type="text/javascript">
