--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@
 					<li><a href="/projects.html">Projects</a></li>
           <li class="divider"></li>
           <li><a href="/code.html">Code</a></li>
-          <!-- <li class="divider"></li>
-					<li><a href="#">Blog</a></li> -->
           <li class="divider"></li>
-					<li><a href="/contact.html">Contact</a></li>
+					<li><a href="/blog.html">Blog</a></li>
           <li class="divider"></li>
 				</ul>
 
 				<ul class="right">
+          <li class="divider"></li>
+          <li><a href="/contact.html">Contact</a></li>
           <li class="divider"></li>
 					<li><a href="/credits.html">Credits</a></li>
 				</ul>
@@ -60,7 +60,7 @@
 		</nav>
 	</div>
 </header>
-    <div class="home view">
+    <main class="home view">
   <section class="display-pic">
     <img alt="This is how I look" src="/assets/images/photo.jpg" />
   </section>
@@ -69,16 +69,18 @@
     <p>
       My name is ABHRA BASAK. I am a 21-year old Computer Science Undergraduate
       in <b><a href="http://iitmandi.ac.in">IIT Mandi</a></b> (living in Kolkata).
-      I am passionate about Web Technologies, and also enjoy Programming, Football, Mathematics, Action Movies and Pop Music.
+      I am passionate about Web Technologies, and also enjoy Programming, Football, Puzzles, Action Movies and Pop Music.
       I'm glad you visited my website. Have a look around.
     </p>
     <p>
-      I'm always looking for ideas that might make my work more creative. I'm especially interested in Computer
-      Technologies and the Web. That's why I've decided to get primarily involved in Software Development, particularly Web-based.
-      It is my main focus today, and it will remain so hopefully in the long term.
+      I'm always looking for ideas that might make my work more creative. In my free time, I read developers' blogs and build sotware that is easy to use. I derive inspiration from popular music, and love listening to Internet Radio.
     </p>
     <p>
-      I have also recently undertaken an internship at <b><a href="http://microsoft.com">Microsoft</a></b> IDC (Hyderabad), in <b><a href="http://bing.com">Bing</a></b> Tech-Segments, who have gladly extended a full-time offer to me. My dream of joining Microsoft one day has finally come true.
+      I have recently undertaken an internship with <b><a href="http://microsoft.com">Microsoft</a></b> IDC (Hyderabad),
+      in <b><a href="http://bing.com">Bing</a></b> Tech-Segments, who have gladly extended a full-time offer to me.
+      I am currently involved in building an open-source framework,
+      <b><a href="https://github.com/Abhra1992/hazelward">HazelWard</a></b> for NVIDIA CUDA,
+      and am looking for contributors for the same.
     </p>
   </section>
   <section class="home-social">
@@ -97,12 +99,11 @@
       
     </div>
   </section>
-</div>
+</main>
 
     <footer>
   <b>&copy; 2013</b> Website Designed and Developed by <b>Abhra Basak</b>.<br/>
-  All Trademarks belong to their respective Owners.<br/>
-  Site Last Updated On <b>2014-01-18</b>.
+  Last Updated - <b>2014-02-14</b>.
 </footer>
 
     <script type="text/javascript">
