Changed Home + Credits

--- a/blog.html
+++ b/blog.html
@@ -6,12 +6,12 @@
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="content-language" content="en-in">
-    <meta name="title" content="Margin Auto" />
+    <meta name="title" content="Margin: Auto" />
     <meta name="author" content="Abhra Basak" />
     <meta name="description" content="Abhra Basak's Personal Website" />
     <meta name="copyright" content="Abhra Basak, 2013" />
     <!-- Use title if it's in the page YAML frontmatter -->
-    <title>Margin Auto | ABHRA BASAK</title>
+    <title>Margin: Auto | ABHRA BASAK</title>
 
     <link href="/assets/stylesheets/application.css" media="screen" rel="stylesheet" type="text/css" />
     
@@ -62,14 +62,14 @@
 </header>
     <main class="blog view">
   <div class="margin-auto panel callout">
-    <h2>Margin Auto</h2>
+    <h2>Margin: Auto</h2>
     <h3>Imaginary Stochastic Thoughts</h3>
     <p>Coming Soon</p>
   </div>
 </main>
     <footer>
   <b>&copy; 2013</b> Website Designed and Developed by <b>Abhra Basak</b>.<br/>
-  Last Updated - <b>2014-02-14</b>.
+  Last Updated - <b>2014-02-15</b>.
 </footer>
 
     <script type="text/javascript">
