--- a/index.html
+++ b/index.html
@@ -65,21 +65,22 @@
     <img alt="This is how I look" src="/assets/images/photo.jpg" />
   </section>
   <section class="hello-intro">
-    <h4>Hey, Hi and Hello!</h4>
+    <h3 class="tagline">Computer Enthusiast / Gamer / Foodie<br/>Jack of All Trades, Master of None</h3>
     <p>
-      My name is ABHRA BASAK. I am a 21-year old Computer Science Undergraduate
-      in <b><a href="http://iitmandi.ac.in">IIT Mandi</a></b> (living in Kolkata).
+      <strong>Hey, Hi and Hello!</strong> I am a 21-year old Computer Science Undergraduate
+      in <strong><a href="http://iitmandi.ac.in">IIT Mandi</a></strong> (living in Kolkata).
       I am passionate about Web Technologies, and also enjoy Programming, Football, Puzzles, Action Movies and Pop Music.
       I'm glad you visited my website. Have a look around.
     </p>
     <p>
-      I'm always looking for ideas that might make my work more creative. In my free time, I read developers' blogs and build sotware that is easy to use. I derive inspiration from popular music, and love listening to Internet Radio.
+      I'm always looking for ideas that might make my work more creative. In my free time, I read developers' blogs and
+      build sotware that is easy to use. I derive inspiration from popular music, and love listening to Internet Radio.
     </p>
     <p>
-      I have recently undertaken an internship with <b><a href="http://microsoft.com">Microsoft</a></b> IDC (Hyderabad),
-      in <b><a href="http://bing.com">Bing</a></b> Tech-Segments, who have gladly extended a full-time offer to me.
+      I have recently undertaken an internship with <strong><a href="http://microsoft.com">Microsoft</a></strong> IDC (Hyderabad),
+      in <strong><a href="http://bing.com">Bing</a></strong> Tech-Segments, who have gladly extended a full-time offer to me.
       I am currently involved in building an open-source framework,
-      <b><a href="https://github.com/Abhra1992/hazelward">HazelWard</a></b> for NVIDIA CUDA,
+      <strong><a href="https://github.com/Abhra1992/hazelward">HazelWard</a></strong> for NVIDIA CUDA,
       and am looking for contributors for the same.
     </p>
   </section>
@@ -103,7 +104,7 @@
 
     <footer>
   <b>&copy; 2013</b> Website Designed and Developed by <b>Abhra Basak</b>.<br/>
-  Last Updated - <b>2014-02-14</b>.
+  Last Updated - <b>2014-02-15</b>.
 </footer>
 
     <script type="text/javascript">
